--- a/source/_views/topic.html
+++ b/source/_views/topic.html
@@ -10,12 +10,12 @@
           <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
         </div>
         <div class="col-md-6 hero-video__text" style="padding:25px!important;">
+          <a class="topic-info-link" style="display:block!important;" href="/docs/guides/getting-started">
           <div class="guide-cta-landing" style="padding:25px!important;">
             <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
-            <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</a><br>
-              <br><a href="/docs/guides/getting-started" class="cta cta-yellow">More</a>
-            </p>
+            <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</a></p>
           </div>
+          </a>
         </div>
       </div>
     </div>
