--- a/source/docs.html
+++ b/source/docs.html
@@ -17,140 +17,149 @@ ul.pio-breadcrumb {
 </style>
 
 
-  <h1 class="title">Documentation Topics</h1>
-
-
-  <div class="mb-70">
-    <div class="row row-topics-list row-topics-list-main">
-
-      <div class="main-topic-info">
-        <a class="topic-info-link" href="/docs/get-started">
-
-            <div class="topic-info__text">
-              <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-start.svg)"></div>
-              <h2 class="main-topic-info__title">Get Started</h2>
-              <p class="main-topic-info__description">Migrate existing sites or spin up a new site, then learn how to manage your projects on Pantheon.</p>
-            </div>
-
-        </a>
-      </div>
-
-      <div class="main-topic-info">
-        <a class="topic-info-link" href="/docs/develop">
-
-            <div class="topic-info__text">
-              <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-develop.svg)"></div>
-              <h2 class="main-topic-info__title">Develop</h2>
-              <p class="main-topic-info__description">Set up your local or  work via SFTP and Git within our Dev, Test, and Live environments to follow development best practices.</p>
-            </div>
-
-        </a>
-      </div>
-      <div class="main-topic-info">
-        <a class="topic-info-link" href="/docs/go-live">
-
-            <div class="topic-info__text">
-              <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-golive.svg)"></div>
-              <h2 class="main-topic-info__title">Go Live</h2>
-              <p class="main-topic-info__description">Learn how to launch sites on Pantheon. Select the correct plan, then add your domain and enable HTTPS.</p>
-            </div>
-
-        </a>
-      </div>
+<h1 class="title">Documentation Topics</h1>
+<div class="row mb-20">
+  <div class="col-md-12">
+    <a class="topic-info-link" style="display:block!important;" href="/docs/guides/getting-started">
+    <div class="guide-cta-landing" style="padding:25px!important;">
+      <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+      <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</a></p>
     </div>
-      <div class="row row-topics-list row-topics-list-secondary">
+    </a>
+  </div>
+</div>
 
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/platform">
+<div class="mb-70">
+  <div class="row row-topics-list row-topics-list-main">
 
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-platform.svg)"></div>
-            <div class="topic-info__text">
-              <h3 class="topic-info__title">Explore Platform Architecture</h3>
-              <p class="topic-info__description">Understand and leverage our container-based infrastructure for smooth scaling.</p>
-            </div>
+    <div class="main-topic-info">
+      <a class="topic-info-link" href="/docs/get-started">
 
-        </a>
-      </div>
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/automate">
+        <div class="topic-info__text">
+          <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-start.svg)"></div>
+          <h2 class="main-topic-info__title">Get Started</h2>
+          <p class="main-topic-info__description">Migrate existing sites or spin up a new site, then learn how to manage your projects on Pantheon.</p>
+        </div>
 
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-automate.svg)"></div>
-            <div class="topic-info__text">
-              <h3 class="topic-info__title">Automate & Integrate</h3>
-              <p class="topic-info__description">Script common procedures using Quicksilver and the Pantheon YAML file. Integrate third-party services with Drupal and WordPress.</p>
-            </div>
-
-        </a>
-      </div>
-
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/performance">
-
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-performance.svg)"></div>
-            <div class="topic-info__text">
-              <h3 class="topic-info__title">Optimize Performance</h3>
-              <p class="topic-info__description">Configure cache, upgrade PHP, and use New Relic APM for optimal performance.</p>
-            </div>
-
-        </a>
-      </div>
-
+      </a>
     </div>
 
-    <div class="row row-topics-list row-topics-list-secondary">
+    <div class="main-topic-info">
+      <a class="topic-info-link" href="/docs/develop">
 
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/manage">
+        <div class="topic-info__text">
+          <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-develop.svg)"></div>
+          <h2 class="main-topic-info__title">Develop</h2>
+          <p class="main-topic-info__description">Set up your local or  work via SFTP and Git within our Dev, Test, and Live environments to follow development best practices.</p>
+        </div>
 
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-manage.svg)"></div>
-            <div class="topic-info__text">
-              <h3 class="topic-info__title">Manage Teams & Organizations</h3>
-              <p class="topic-info__description">Add team members, restrict access, and manage projects in bulk using cloud-based development tools.</p>
-            </div>
+      </a>
+    </div>
+    <div class="main-topic-info">
+      <a class="topic-info-link" href="/docs/go-live">
 
-        </a>
+        <div class="topic-info__text">
+          <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-golive.svg)"></div>
+          <h2 class="main-topic-info__title">Go Live</h2>
+          <p class="main-topic-info__description">Learn how to launch sites on Pantheon. Select the correct plan, then add your domain and enable HTTPS.</p>
+        </div>
 
-      </div>
+      </a>
+    </div>
+  </div>
+  <div class="row row-topics-list row-topics-list-secondary">
 
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/troubleshoot">
+    <div class="topic-info">
+      <a class="topic-info-link" href="/docs/platform">
 
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-troubleshoot.svg)"></div>
-            <div class="topic-info__text">
-              <h3 class="topic-info__title">Troubleshoot</h3>
-              <p class="topic-info__description">Understand known issues with plugins or modules and expose problems in log files.</p>
-            </div>
+        <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-platform.svg)"></div>
+        <div class="topic-info__text">
+          <h3 class="topic-info__title">Explore Platform Architecture</h3>
+          <p class="topic-info__description">Understand and leverage our container-based infrastructure for smooth scaling.</p>
+        </div>
 
-        </a>
-      </div>
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/getting-support">
+      </a>
+    </div>
+    <div class="topic-info">
+      <a class="topic-info-link" href="/docs/automate">
 
-            <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-support.svg)"></div>
-            <div class="topic-info__text">
-              <h3 class="topic-info__title">Support</h3>
-              <p class="topic-info__description">Need more help? We’re here for you. Learn how to get support directly from our team.</p>
-            </div>
+        <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-automate.svg)"></div>
+        <div class="topic-info__text">
+          <h3 class="topic-info__title">Automate & Integrate</h3>
+          <p class="topic-info__description">Script common procedures using Quicksilver and the Pantheon YAML file. Integrate third-party services with Drupal and WordPress.</p>
+        </div>
 
-        </a>
-      </div>
+      </a>
+    </div>
 
+    <div class="topic-info">
+      <a class="topic-info-link" href="/docs/performance">
+
+        <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-performance.svg)"></div>
+        <div class="topic-info__text">
+          <h3 class="topic-info__title">Optimize Performance</h3>
+          <p class="topic-info__description">Configure cache, upgrade PHP, and use New Relic APM for optimal performance.</p>
+        </div>
+
+      </a>
     </div>
 
   </div>
 
+  <div class="row row-topics-list row-topics-list-secondary">
 
+    <div class="topic-info">
+      <a class="topic-info-link" href="/docs/manage">
 
+        <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-manage.svg)"></div>
+        <div class="topic-info__text">
+          <h3 class="topic-info__title">Manage Teams & Organizations</h3>
+          <p class="topic-info__description">Add team members, restrict access, and manage projects in bulk using cloud-based development tools.</p>
+        </div>
 
+      </a>
 
-
-  <div class="row">
-    <div class="col-md-12">
-      <h2 class="subtitle">Popular Documentation</h2>
     </div>
+
+    <div class="topic-info">
+      <a class="topic-info-link" href="/docs/troubleshoot">
+
+        <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-troubleshoot.svg)"></div>
+        <div class="topic-info__text">
+          <h3 class="topic-info__title">Troubleshoot</h3>
+          <p class="topic-info__description">Understand known issues with plugins or modules and expose problems in log files.</p>
+        </div>
+
+      </a>
+    </div>
+    <div class="topic-info">
+      <a class="topic-info-link" href="/docs/getting-support">
+
+        <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-support.svg)"></div>
+        <div class="topic-info__text">
+          <h3 class="topic-info__title">Support</h3>
+          <p class="topic-info__description">Need more help? We’re here for you. Learn how to get support directly from our team.</p>
+        </div>
+
+      </a>
+    </div>
+
   </div>
-  <div class="row mb-70">
-    <div class="col-md-12">
+
+</div>
+
+
+
+
+
+
+<div class="row">
+  <div class="col-md-12">
+    <h2 class="subtitle">Popular Documentation</h2>
+  </div>
+</div>
+<div class="row mb-70">
+  <div class="col-md-12">
     <ul class="top-docs top-docs-3col">
       <li><a href="/docs/terminus">Terminus Manual</a></li>
       <li><a href="/docs/guides/cloudflare-enable-https">Adding HTTPS For Free With Cloudflare</a></li>
@@ -165,11 +174,11 @@ ul.pio-breadcrumb {
       <li><a href="/docs/enable-https">Enable Secure HTTPS Communication</a></li>
       <li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
     </ul>
-    </div>
   </div>
+</div>
 
 
 
-  <div class="row mb-70">
-    {% include "changelog_preview.twig" %}
-  </div>
+<div class="row mb-70">
+  {% include "changelog_preview.twig" %}
+</div>
