--- a/source/_partials/topics/automate.html
+++ b/source/_partials/topics/automate.html
@@ -43,63 +43,57 @@
 <div style="padding:15px;" class="row mb-20">
   <div class="col-md-12 subtopic-container">
     <div class="subtopic-groups">
-      <h3>Command Line Inerface</h3>
+      <h3>Command Line Interface</h3>
       <p class="topic-info__description">Use Terminus to interact with the platform from the command line.</p>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="subtopic-lists col-md-6">
-          <h4>Terminus</h4>
-          <ul class="topic-docs">
-          {% for doc in data.docs_tags.devterminus if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.devterminus if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.devterminus %}
-          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
-          <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-          {% endif %}
-          {% endfor %}
-          </ul>
-        </div>
-        <div class="subtopic-lists col-md-6">
-          <h4>Drush</h4>
-          <ul class="topic-docs">
-          {% for doc in data.docs_tags.devdrush if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.devdrush if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.devdrush %}
-          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
-          <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-          {% endif %}
-          {% endfor %}
-          </ul>
-        </div>
+    <div class="col-md-12">
+      <div class="subtopic-lists col-md-6">
+        <h4>Terminus</h4>
+        <ul class="topic-docs">
+        {% for doc in data.docs_tags.devterminus if doc.meta.type == "video"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devterminus if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devterminus %}
+        {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+        <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+        {% endif %}
+        {% endfor %}
+        </ul>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="subtopic-lists col-md-6">
-          <h4>WP-CLI</h4>
-          <ul class="topic-docs">
-          {% for doc in data.docs_tags.devwpcli if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.devwpcli if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.devwpcli %}
-          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
-          <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-          {% endif %}
-          {% endfor %}
-          </ul>
-        </div>
+      <div class="subtopic-lists col-md-6">
+        <h4>Drush</h4>
+        <ul class="topic-docs">
+        {% for doc in data.docs_tags.devdrush if doc.meta.type == "video"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devdrush if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devdrush %}
+        {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+        <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+        {% endif %}
+        {% endfor %}
+        </ul>
+      </div>
+      <div class="subtopic-lists col-md-6">
+        <h4>WP-CLI</h4>
+        <ul class="topic-docs">
+        {% for doc in data.docs_tags.devwpcli if doc.meta.type == "video"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devwpcli if doc.meta.type == "guide"%}
+        <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devwpcli %}
+        {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+        <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+        {% endif %}
+        {% endfor %}
+        </ul>
       </div>
     </div>
   </div>
